--- a/hackers.css
+++ b/hackers.css
@@ -7,7 +7,18 @@ h1 {
     font-family: Impact, Haettenschweiler, 'Arial Narrow Bold', sans-serif;
     font-size: x-large;
     text-align: center;
-    color: #ebe8db;
+    color: white;
+    animation: neonEffect 5s infinite;
+}
+@keyframes neonEffect {
+    0%, 35%, 45%, 65%, 100% {
+        text-shadow: white 0 0 12px,
+        #EFFD6D 0 0 24px,
+        #EFFD6D 0 0 36px;
+    }
+    40%, 60% {
+        text-shadow: none;
+    }
 }
 p {
     color: white;
